# CryptoData

./: .gitIgnore  Dockerfile  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
app/: main.py
